# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
example-charts/a-good/: values.yaml
example-charts/a-good/templates/: deployment.yaml  service.yaml
example-charts/a-good/templates/tests/: test-connection.yaml
example-charts/deprecated/: values.yaml
example-charts/deprecated/templates/: ingress.yaml
hooks/: helm-pluto.py  kube-score.py  promtool.py  utils.py
tests/: test_promtool.py
tests/example-charts/01-pass/: Chart.yaml  values.yaml
tests/example-charts/01-pass/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  serviceaccount.yaml
tests/example-charts/02-good/: values.yaml
tests/example-charts/02-good/templates/: NOTES.txt  hpa.yaml  ingress.yaml  serviceaccount.yaml
tests/example-charts/03-deprecated/: Chart.yaml
tests/example-charts/04-fail/: Chart.yaml  values.yaml
tests/example-charts/04-fail/templates/: _helpers.tpl  service.yaml
tests/example-prometheus/: invalid-config.yml  invalid-rules.yml
